* What's new in version 3.2, PRERELEASE

- The regular expression engine now supports extraction of the matched
  string and subexpressions using the matched() tapset function.

- The translator produces better diagnostics for common/annoying case
  of missing debuginfo that blocks use of context $variables. 

- "stap -k" build trees in $TMPDIR now also include a preprocessed .i form
  of the generated module .c code, for problem diagnostics purposes.

- Runtime/tapsets were ported to include up to kernel version PRERELEASE.

- The syscall.execve probes now provide a decoded env_str string vector,
  just like the argument vector. Because of this, the unused
  __count_envp() and __count_compat_evenp() functions have been
  deprecated.

- The task_exe_file() Function has been deprecated and replaced by the
  current_exe_file() function.

- A new probe alias input.char allows scripts to access input from stdin
  during runtime.

* What's new in version 3.1, 2017-02-17

- Systemtap now needs C++11 to build.

- Syscall and nd_syscall tapsets have been merged in a way that either
  dwarf-based, or non-dwarf probe gets automatically used based on
  debuginfo availability (e.g. probe syscall.open).

  To force use the dwarf based probe, a dw_syscall has been introduced
  (e.g. probe dw_syscall.open) and the non-dwarf syscall probes were
  left untouched (e.g. nd_syscall.open).

- The syscall tapset files have been reorganized in a way that original
  big tapset files carrying many syscall probes were split into smaller
  'sysc_' prefixed tapset files.  This should reduce the syscall tapset
  maintenance burden.

- The powerpc variant of syscall.compat_sysctl got deprecated on favor of
  syscall.sysctl32. This aligns the syscall to its respective nd_syscall and
  to ia64/s390/x86_64 variants too.

- The syscall.compat_pselect7a (this was actually a typo, but still available
  for compatibility purposes with --compatible 1.3) has beed deprecated.
