@@ -396,6 +396,7 @@
     </para>
 !Itapset/string.stp
 !Itapset/tokenize.stp
+!Itapset/regex.stp
     </chapter>
   <chapter id="ansi.stp">
     <title>Utility functions for using ansi control chars in logs</title>
