@@ -1,7 +1,10 @@
 * What's new in version 3.2, PRERELEASE
 
 - The regular expression engine now supports extraction of the matched
-  string and subexpressions using the matched() tapset function.
+  string and subexpressions using the matched() tapset function:
+  
+      if ("regexculpicator" =~ "reg(ex.*p).*r") log(matched(1))
+   -> exculp
 
 - The translator produces better diagnostics for common/annoying case
   of missing debuginfo that blocks use of context $variables. 
